# Wildfire-Protection

./: .gitignore  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  package.json  render.yaml  vercel.json
backend/: .gitignore  Dockerfile  README.md  README_API.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: fems_api.py  fems_endpoints.py  fems_fastapi.py  llm_endpoint.py  plume_endpoint.py  routes.py  wildfire_map_endpoint.py
backend/app/core/: config.py
backend/scripts/: interactive_llm_cli.py
backend/tests/: test_plume.py
frontend/: .dockerignore  Dockerfile  README.md  env.example  next.config.mjs  package-lock.json  package.json
frontend/fire-risk-heatmap/: App.tsx  package-lock.json  package.json  tailwind.config.js
frontend/fire-risk-heatmap/public/: index.html  manifest.json
frontend/fire-risk-heatmap/src/components/: ControlsPanel.tsx  FireRiskContext.tsx  FireRiskLegend.tsx  HeatMapLayer.tsx  LoadingSpinner.tsx  MapContainer.tsx
frontend/fire-risk-heatmap/src/context/: FireRiskContext.tsx
frontend/fire-risk-heatmap/src/hooks/: useGoogleMaps.ts
frontend/fire-risk-heatmap/src/services/: apiService.ts
frontend/fire-risk-heatmap/src/styles/: App.css
frontend/src/app/: WildfireMap.tsx  layout.tsx  page.tsx
frontend/src/components/: ChatModal.tsx  RespiraLogo.tsx
frontend/src/lib/: api.ts
frontend/wildfire-risk-app/: README.md  package-lock.json  package.json  tailwind.config.js
frontend/wildfire-risk-app/public/: index.html  manifest.json
frontend/wildfire-risk-app/src/: App.tsx
(+24 files in other folders)
