[tool.poetry]
name = "wildfire-protection-backend"
version = "0.1.0"
description = "FastAPI backend for Wildfire Protection"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
pydantic = "^2.8.0"
requests = "^2.32.0"
pandas = "^2.0.0"
google-generativeai = "^0.7.0"
langchain = "^0.2.0"
langchain-google-genai = "^1.0.0"
langchain-community = "^0.2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


